--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
+spring.datasource.url=jdbc:postgresql://DATABASE_IP:DATABASE_PORT/postgres
+spring.datasource.username=DATABASE_USERNAME
+spring.datasource.password=DATABASE_PASSWORD
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
-logging.level.sql=DEBUG
-
-security.allowedOrigins=http://localhost:3000,http://localhost:3001
+security.allowedOrigins=http://localhost,http://localhost:80, http://FRONTEND_IP
