--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABAS
 
 logging.level.sql=DEBUG
 
-security.allowedOrigins=http://FRONTEND_IP
+security.allowedOrigins=http://35.198.3.241
