--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
 
 logging.level.sql=DEBUG
-security.allowedOrigins=http://FRONTEND_IP
+security.allowedOrigins=http://REPLACE_FRONTEND_IP
