--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
+spring.datasource.url=jdbc:postgresql://REPLACE_DATABASE_IP:5432/REPLACE_DATABASE_NAME
+spring.datasource.username=REPLACE_DATABASE_USER
+spring.datasource.password=REPLACE_DATABASE_PASSWORD
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
-logging.level.sql=DEBUG
-security.allowedOrigins=http://REPLACE_FRONTEND_IP
+security.allowedOrigins=http://localhost,http://REPLACE_FRONTEND_IP
